fix: fixed use of duplicated types - MarketDataRecord and MarketDataEntity